--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "portfolio",
-  "version": "0.2.0",
+  "name": "personal-website",
+  "version": "0.2.0-alpha.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -25,6 +25,6 @@
   },
   "description": "Personal Website (Work in progress)",
   "main": "index.js",
-  "author": "",
-  "license": "ISC"
+  "author": "Luke Christopher Shephard",
+  "license": "MIT"
 }
